--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -35,15 +35,15 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Brittany Neal</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/brit_with_hat.jpg" alt="">
-        </span>
+      <div class="d-lg-block navbar-nav nav-item">
+        <img class="img-fluid img-profile mx-auto mb-2" width="175" height="175" src="img/brit_with_hat.jpg" alt="Brittany Neal"/>
+        <div class="d-block d-lg-none" padding:15px>Brittany Neal</div>
+      </div>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      </button> -->
+      <div class="collapse navbar-collapse" top:50px id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -210,8 +210,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="passions">
         <div class="my-auto">
           <h2 class="mb-5">Passions</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I love hiking at Yosemite and Pinacles National park.</p>
-          <p class="mb-0">I am passionate about nutrition and beautiful produce, and have compiled my best recipes for your enjoyment here: 
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I love hiking at Yosemite and Pinnacles National park.</p>
+          <p class="mb-0">I am passionate about nutrition, food science, and beautiful produce, and have compiled my best recipes for your enjoyment here: 
             <a href="https://neals-meals-22.herokuapp.com/">Neal's Meals</a>
           </p>
         </div>
