fixed image - still need to center

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" position='relative' id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <div class="d-lg-block navbar-nav nav-item">
-        <img class="img-fluid img-profile mx-auto mb-2" width="175" height="175" src="img/brit_with_hat.jpg" alt="Brittany Neal"/>
-        <div class="d-block d-lg-none" padding:15px>Brittany Neal</div>
+        <img class="img-fluid img-profile mx-auto mb-2" position='absolute' width="200" height="200" src="img/brit_with_hat.jpg" alt="Brittany Neal"/>
       </div>
       </a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
